Thu May 06 09:59:48 2004  George Lebl <jirka@5z.com>

	* gui/misc.[ch], gui/gdmlogin.c, gui/gdmsetup.c,
	  gui/gdmchooser.c, gui/greeter/greeter.c: Apply and heavily
	  massage a patch from Muktha to add font setting to the theming
	  and finally fix #125070 hopefully 

	* daemon/misc.c: our gethostent should strip the ::ffff: since it's
	  confusing to rest of gdm and X in particular apparently, so whack
	  it from the hostname so that it doesn't get into the display
	  name.  Should fix #133246

	* gui/gdmlogin.c, gui/greeter/greeter_item_pam.c: fix #123958
	  by having an empty message clear the message string rather then
	  append an empty string.  Evil, but it fixes the bug.  PAM is one
	  large bug in fact, and would require a rather large flywatter to
	  fix, based on a patch from Frederic Crozat

Tue May 04 09:47:21 2004  George Lebl <jirka@5z.com>

	* daemon/display.c: Don't whack the socket_conn on display_manage
	  since that completely whacks out flexiserver error reporting and
	  breaks flexiserver.  Whoops!  (I should review innocent looking
	  patches better)

2004-04-09  John C Barstow  <jbowtie@amathaine.com>

        * configure.in: Added "mi" (Maori) to ALL_LINGUAS.

Fri Apr 16 16:02:53 2004  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: update version information, no changes.  Damnit
	  I should have done this before the release.

Fri Apr 16 16:00:50 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.1

Fri Apr 16 15:08:25 2004  George Lebl <jirka@5z.com>

	* daemon/auth.c: ensure clean building even if FamilyInternetV6
	  is not define (define it ourselves to '6' which is what it is)

	* configure.in: raise version

	* NEWS: update

Tue Apr 13 11:22:00 2004  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: stop calling 'gdm' 'genius', I'm confusing
	  my projects :)

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
